We are adding the modifications for making the documentation

--- a/paper/Photons.tex
+++ b/paper/Photons.tex
@@ -9,10 +9,26 @@
 
 
 \input{../photon/resultat/CO2}
-
 \input{../photon/resultat/O}
 \input{../photon/resultat/O2}
-%\input{../photon/resultat/CH4}
 \input{../photon/resultat/CO}
 \input{../photon/resultat/N2}
+\input{../photon/resultat/CH4}
+\input{../photon/resultat/Al}
+\input{../photon/resultat/Ca}
+\input{../photon/resultat/C}
+\input{../photon/resultat/Fe}
+\input{../photon/resultat/H2O}
+\input{../photon/resultat/H2}
+\input{../photon/resultat/He}
+\input{../photon/resultat/HO}
+\input{../photon/resultat/H}
+\input{../photon/resultat/K}
+\input{../photon/resultat/Mg}
+\input{../photon/resultat/Na}
+\input{../photon/resultat/NO}
+\input{../photon/resultat/N}
+\input{../photon/resultat/Si}
+\input{../photon/resultat/S}
+\input{../photon/resultat/Ti}
 
