--- a/paper/atmociad.bib
+++ b/paper/atmociad.bib
@@ -12,6 +12,93 @@
 	year = {2000},
 	tags = "MHD, Rayons cosmiques, A lire"
 }
+@article{Menager2010,
+  title={H Lyman $\alpha$ line in Jovian aurorae: electron transport and radiative transfer coupled modelling},
+  author={Menager, H and Barth{\'e}lemy, M and Lilensten, J},
+  journal={Astronomy \& Astrophysics},
+  volume={509},
+  pages={A56},
+  year={2010},
+  publisher={EDP Sciences}
+}
+
+@ARTICLE{Fremont2006,
+       author = {{Fr{\'e}mont}, F. and {Hajaji}, A. and {Chesnel}, J. -Y.},
+        title = "{K -shell and total ionization cross sections following electron-molecule collisions: An empirical scaling law}",
+      journal = {\pra},
+     keywords = {34.80.Gs, 32.80.Hd, Molecular excitation and ionization by electron impact, Auger effect and inner-shell excitation or ionization},
+         year = 2006,
+        month = nov,
+       volume = {74},
+       number = {5},
+          eid = {052707},
+        pages = {052707},
+          doi = {10.1103/PhysRevA.74.052707},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2006PhRvA..74e2707F},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+@misc{Straub2004,
+	title = {Atomic and {Molecular} {Collisions} {Group}},
+	url = {http://www.ruf.rice.edu/~atmol/index.html},
+	urldate = {2023-10-31},
+	author = {Atomic {and} Molecular collision group},
+}
+@article{Glass2005,
+  title={Dissociation dynamics of doubly excited states of molecular hydrogen},
+  author={Glass-Maujean, M and Schmoranzer, H},
+  journal={Journal of Physics B: Atomic, Molecular and Optical Physics},
+  volume={38},
+  number={8},
+  pages={1093},
+  year={2005},
+  publisher={IOP Publishing}
+}
+
+@article{Yan1998,
+	title = {Photoionization {Cross} {Sections} of {He} and {H2}},
+	volume = {496},
+	issn = {0004-637X},
+	url = {https://dx.doi.org/10.1086/305420},
+	doi = {10.1086/305420},
+	abstract = {We combine accurate measurements at low energies and theoretical calculations at high energies to construct sets of photoionization cross sections of He and H2 that should be reliable at all energies. We control the accuracy of the recommended cross section data by ensuring that they satisfy a range of oscillator strength sum rules. We provide accurate analytic formulae for the photoionization cross sections that have the proper asymptotic form. At high frequencies the cross sections for H2 are 2.8 times those for H.},
+	language = {en},
+	number = {2},
+	urldate = {2023-10-31},
+	journal = {The Astrophysical Journal},
+	author = {Yan, M. and Sadeghpour, H. R. and Dalgarno, A.},
+	month = apr,
+	year = {1998},
+	pages = {1044},
+}
+
+@article{Yan2001,
+	title = {Erratum: {Photoionization} {Cross} {Sections} of {He} and {H2}},
+	volume = {559},
+	issn = {0004-637X},
+	shorttitle = {Erratum},
+	url = {https://ui.adsabs.harvard.edu/abs/2001ApJ...559.1194Y},
+	doi = {10.1086/322775},
+	abstract = {In the paper ``Photoionization Cross Sections of He and H2'' by M. Yan, H. R. Sadeghpour, and A. Dalgarno (ApJ, 496, 1044 [1998]), the analytic representation of the H2 photoionization cross sections (eqs. [17]-[19]) is given incorrectly. The cross sections for H2 may be represented analytically by σH2(E)=107(1-197.448x-0.5+ 438.823x-1-260.481x-1.5+17.915x-2) barns for 15.4H2(E)= (-145.528+351.394x0.5-274.294x+ 74.320x1.5)/E(keV)3.5 barns for 18H2(E)=(65.304-91.762x0.5+51.778x- 9.364x1.5)/E(keV)3.5 barns for 30H2(E)=45.57(1-2.003x-0.5- 4.806x-1+50.577x-1.5-171.044x-2 +231.608x-2.5-81.885x-3)/E(keV)3.5 barns for E{\textgreater}85 eV. The sum rules and the tabulated photoionization cross sections in Tables 6 and 7 are correct. The errors were drawn to our attention by the paper of J. Wilms, A. Allen, and R. McCray (ApJ, 542, 914 [2000]). We point out that our recommended cross sections are constructed from the best available experimental and calculated data and modified to ensure that several sum rules are satisfied and to conform to the correct physical high-energy limit. We emphasize that the asymptotic ratio of the nonrelativistic photoionization cross sections of H2 and H is given exactly as (σH2)/ (σH) =4π{\textless}δ(r1a){\textgreater}, where {\textless}δ(r1a){\textgreater} is the delta function matrix element at the position of nucleus a for electron 1. The numerical value of the ratio of cross sections is σH2/ σH=2.833 at high energies. As noted by us and by Wilms, Allen, and McCray, where molecular hydrogen contributes to the total photoabsorption, this excess of the ratio over 2 can be important.},
+	urldate = {2023-10-31},
+	journal = {The Astrophysical Journal},
+	author = {Yan, M. and Sadeghpour, H. R. and Dalgarno, A.},
+	month = oct,
+	year = {2001},
+	note = {ADS Bibcode: 2001ApJ...559.1194Y},
+	pages = {1194--1194},
+}
+@article{Chung1993,
+  title={Dissociative photoionization of H2 from 18 to 124 eV},
+  author={Chung, YM and Lee, E-M and Masuoka, T and Samson, James AR},
+  journal={The Journal of chemical physics},
+  volume={99},
+  number={2},
+  pages={885--889},
+  year={1993},
+  publisher={American Institute of Physics}
+}
 
 @article{Caballero-Lopez2004b,
 	page = {01101},
@@ -24,6 +111,20 @@
 	doi = {10.1029/2003JA010098},
 	tags = "MHD, Rayons cosmiques"
 }
+@article{Huebner2015,
+	title = {Photoionization and photodissociation rates in solar and blackbody radiation fields},
+	journal = {Planetary and Space Science},
+	volume = {106},
+	pages = {11-45},
+	year = {2015},
+	issn = {0032-0633},
+	doi = {https://doi.org/10.1016/j.pss.2014.11.022},
+	url = {https://www.sciencedirect.com/science/article/pii/S003206331400381X},
+	author = {W.F. Huebner and J. Mukherjee},
+	keywords = {Atoms, Ions, Molecules, Molecular ions, Photodissociation, Photoionization, Dissociative photoionization, Excess energy, Solar radiation, Blackbody radiation},
+	abstract = {Rate coefficients for ionization and dissociation have been calculated for over 140 atomic, molecular, and ionic species in the radiation fields of (1) the quiet and the active Sun at 1AU heliocentric distance and (2) blackbodies at four selected temperatures in the range from T=1000K to 1,000,000K without factors for radiation dilution with distance from the source. The rate coefficients in units of transitions per second (s−1) and associated excess energies of the photo products in eV are tabulated for about 265 ionization, dissociation, and dissociative ionization branches. Users can interactively access this information and plot and download cross sections and wavelength-binned results for various solar activities and blackbody temperatures on our website http://phidrates.space.swri.edu.}
+}
+
 
 @article{McCracken2004,
 	page = {12103},
