--- a/paper/atmociad.tex
+++ b/paper/atmociad.tex
@@ -13,6 +13,7 @@
 \usepackage{hyperref}
 \usepackage{listings}
 \usepackage{nomencl}
+\usepackage{adjustbox}
 \newcommand{\Prog}{AeroPlanets }
 \makenomenclature
 
