We add the extrapolation following a new function

--- a/paper/atmociad.bib
+++ b/paper/atmociad.bib
@@ -21,6 +21,52 @@
   year={2010},
   publisher={EDP Sciences}
 }
+@article{Mcelroy1971,
+  title={Dissociation of CO 2 in the Martian atmosphere},
+  author={McElroy, Michael B and McConnell, John C},
+  journal={Journal of Atmospheric Sciences},
+  volume={28},
+  number={6},
+  pages={879--884},
+  year={1971}
+}
+@ARTICLE{Wu1979,
+       author = {{Wu}, C.~Y.~R. and {Judge}, D.~L.},
+        title = "{The atomic oxygen 1304 {\r{A}} emission produced through photodissociation of CO and CO$_{2}$.}",
+      journal = {Chemical Physics Letters},
+     keywords = {Physics},
+         year = 1979,
+        month = jan,
+       volume = {68},
+        pages = {495-498},
+          doi = {10.1016/0009-2614(79)87245-0},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/1979CPL....68..495W},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
+@article{Witasse2002,
+  title={Prediction of a CO22+ layer in the atmosphere of Mars},
+  author={Witasse, O and Dutuit, O and Lilensten, J and Thissen, R and Zabka, J and Alcaraz, C and Blelly, P-L and Bougher, SW and Engel, S and Andersen, LH and others},
+  journal={Geophysical research letters},
+  volume={29},
+  number={8},
+  pages={104--1},
+  year={2002},
+  publisher={Wiley Online Library}
+}
+@article{Masuoka1993,
+  title={Single-, double-, and triple-photoionization cross sections of carbon monoxide (CO) and ionic fragmentation of CO+, CO 2+, and CO 3+},
+  author={Masuoka, Toshio and Nakamura, Eiken},
+  journal={Physical Review A},
+  volume={48},
+  number={6},
+  pages={4379},
+  year={1993},
+  publisher={APS}
+}
+
 
 @ARTICLE{Fremont2006,
        author = {{Fr{\'e}mont}, F. and {Hajaji}, A. and {Chesnel}, J. -Y.},
@@ -1666,19 +1712,6 @@
 	tags = "Mars, Article dication venus, Article Venus Emit"
 }
 
-@article{Wu1979,
-	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
-	Adsurl = {http://adsabs.harvard.edu/abs/1979CPL....68..495W},
-	Doi = {10.1016/0009-2614(79)87245-0},
-	Keywords = {Physics},
-	author = {Wu, C. Y. R. and Judge, D. L.},
-	title = {{The atomic oxygen 1304 \AA ~emission produced through photodissociation of $CO$ and $CO_2$.}},
-	journal = {Chemical Physics Letters},
-	volume = {68},
-	pages = {495-498},
-	year = {1979},
-	tags = "Chimie, Airglow, Article Venus Emit"
-}
 
 @article{Yelle2006,
 	page = {567-576},
