We correct most of the references in the photon part

--- a/paper/atmociad.bib
+++ b/paper/atmociad.bib
@@ -4035,6 +4035,54 @@
 	tags = "Airglow, N-N2"
 }
 
+@article{Yoshino1996,
+	title = {Absorption cross section measurements of water vapor in the wavelength region 120 to 188 nm},
+	volume = {211},
+	issn = {0301-0104},
+	url = {https://ui.adsabs.harvard.edu/abs/1996CP....211..387Y/abstract},
+	doi = {10.1016/0301-0104(96)00210-8},
+	abstract = {Laboratory measurements of the relative absorption cross sections of H {\textless}SUB{\textgreater}2{\textless}/SUB{\textgreater}O at the temperature 295 K have been made throughout the wavelength region 120 to 188 nm. Laboratory measurements of the absolute absorption cross sections of H {\textless}SUB{\textgreater}2{\textless}/SUB{\textgreater}O at 295 K have been made at 19 different wavelengths in the region 120 to 188 nm, and these absolute values have been used to put the relative cross section measurements of H {\textless}SUB{\textgreater}2{\textless}/SUB{\textgreater}O at 295 K on an absolute basis.},
+	language = {en},
+	number = {1},
+	urldate = {2023-11-03},
+	journal = {Chemical Physics},
+	author = {Yoshino, K. and Esmond, J. R. and Parkinson, W. H. and Ito, K. and Matsui, T.},
+	month = nov,
+	year = {1996},
+	pages = {387--391},
+}
+
+@article{Yoshino1997,
+	title = {Absorption cross section measurements of water vapor in the wavelength region 120 nm to 188 nm ({Chem}. {Phys}. 211 (1996) 387 391)},
+	volume = {215},
+	issn = {0301-0104},
+	url = {https://ui.adsabs.harvard.edu/abs/1997CP....215..429Y/abstract},
+	doi = {10.1016/S0301-0104(96)00381-3},
+	language = {en},
+	number = {3},
+	urldate = {2023-11-03},
+	journal = {Chemical Physics},
+	author = {Yoshino, K. and Esmond, J. R. and Parkinson, W. H. and Ito, K. and Matsui, T.},
+	month = mar,
+	year = {1997},
+	pages = {429--430},
+}
+
+@article{Parkinson2003,
+	title = {Absorption cross-section measurements of water vapor in the wavelength region 181 199 nm},
+	volume = {294},
+	issn = {0301-0104},
+	url = {https://ui.adsabs.harvard.edu/abs/2003CP....294...31P},
+	doi = {10.1016/S0301-0104(03)00361-6},
+	abstract = {Laboratory measurements of the relative absorption cross-sections of H 2O at the temperature 295 K have been made throughout the wavelength region 181-199 nm. Laboratory measurements of the absolute absorption cross-sections of H 2O at 295 K have been made at 15 different wavelengths, and these absolute values have been used to put the relative cross-section measurements of H 2O at 295 K on an absolute basis, In combination with our previous measurements [Chem. Phys. 211 (1996) 387; 215 (1997) 429], the absorption cross-section of H 2O are available in the wavelength region 118-199 nm at 295 K.},
+	urldate = {2023-11-03},
+	journal = {Chemical Physics},
+	author = {Parkinson, W. H. and Yoshino, K.},
+	month = oct,
+	year = {2003},
+	note = {ADS Bibcode: 2003CP....294...31P},
+	pages = {31--35},
+}
 @article{Chen1994,
 	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
 	Adsurl = {http://adsabs.harvard.edu/abs/1994PhRvA..50.3968C},
@@ -4048,6 +4096,20 @@
 	year = {1994},
 	tags = "Airglow"
 }
+@article{Wu1993,
+author = {Wu, C. Y. Robert and Chen, F. Z.},
+title = {Velocity distributions of hydrogen atoms and hydroxyl radicals produced through solar photodissociation of water},
+journal = {Journal of Geophysical Research: Planets},
+volume = {98},
+number = {E4},
+pages = {7415-7435},
+doi = {https://doi.org/10.1029/92JE03016},
+url = {https://agupubs.onlinelibrary.wiley.com/doi/abs/10.1029/92JE03016},
+eprint = {https://agupubs.onlinelibrary.wiley.com/doi/pdf/10.1029/92JE03016},
+abstract = {The calculated velocity distributions of hydrogen atoms and hydroxyl radicals produced through solar photodissociation of gaseous water molecules are presented. Under collisionless conditions, the calculation has been carried out using (1) the most recently available absolute partial cross sections for the production of H and OH through photodissociation of H2O from its absorption onset at 1860 Å down to 500 Å, (2) the newly available vibrational and rotational energy distributions of both the excited and ground state OH photofragments, (3) the calculated cross sections for the total dissociation processes, and (4) the integrated solar flux in 10 Å increments from 500 to 1860Å in the continuum regions and the specific wavelength and flux at the bright solar lines, e.g., the H Lyα, Lyβ, Lyγ, O VI, C III, He I. Because of the lack of data in several dissociation processes or in certain spectral regions, we can only obtain upper and lower bound velocity distributions. In terms of quantum yields, the lower bound case is set by assuming that all the undetected neutral products are something other than H and OH fragments and an upper bound is set by assuming the undetected neutral products are all H and OH fragments. In terms of internal energy distributions of the OH fragments the upper bound is set by neglecting them and a lower bound is set by taking the available or the best estimated values. The calculated results show that the H atoms and the OH radicals produced exhibit multiple velocity groups. Since most of the current cometary modeling uses a single velocity of 20 km/s associated with the photodissociation of H2O, the present results may be useful in interpreting the many peaks observed in the velocity distributions of the H Lyα and Hα of comets.},
+year = {1993}
+}
+
 
 @article{Costa2001,
 	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
@@ -4103,6 +4165,23 @@
 	year = {1972},
 	tags = "Airglow"
 }
+@article{Ukai1992,
+    author = {Ukai, Masatoshi and Kameta, Kosei and Kouchi, Noriyuki and Nagano, Kazunori and Hatano, Yoshihiko and Tanaka, Kenichiro},
+    title = "{Autoionizing‐resonance enhanced preferential photodissociation of CO2 in superexcited states}",
+    journal = {The Journal of Chemical Physics},
+    volume = {97},
+    number = {5},
+    pages = {2835-2842},
+    year = {1992},
+    month = {09},
+    abstract = "{Fluorescence excitation spectra of CO2+(Ã 2Πu→X̃ 2Πg), (B̃ 2∑u+→X̃ 2Πg), and CO(A 1Π→X 1Σ) emissions produced in the photoionization and neutral photodissociation of CO2 have been obtained in the 30–92 nm region. A strong competition between autoionization and neutral dissociation observed in the region near the ionization thresholds to form CO2+(Ã 2Πu) and CO2+(B̃ 2Σu+) states clearly shows the preferential enhancement of the neutral dissociation, which is explained mainly by the intrinsic autoionization rate of the individual superexcited Rydberg states. A drastic step‐down decrease in a fluorescence excitation spectrum in the vacuum ultraviolet region at the thresholds has been ascribed to a dramatic density dilution of the superexcited states into the continuum.}",
+    issn = {0021-9606},
+    doi = {10.1063/1.463026},
+    url = {https://doi.org/10.1063/1.463026},
+    eprint = {https://pubs.aip.org/aip/jcp/article-pdf/97/5/2835/11323364/2835\_1\_online.pdf},
+}
+
+
 
 @article{Fox2004b,
 	page = {08306},
@@ -4696,7 +4775,7 @@
 	tags = "Soleil"
 }
 
-@article{Lummerzheim1994,
+@article{Lilensten1994,
 	Issn = {0992-7689},
 	Url = {http://www.ann-geophys.net/12/1039/1994/},
 	author = {Lummerzheim, D. and Lilensten, J.},
@@ -7835,6 +7914,15 @@
 	tags = "a_lire_projet_postdoc, Radiative-Transfer, Electrons"
 }
 
+@BOOK{Rees1989,
+       author = {{Rees}, M.~H.},
+        title = "{Physics and Chemistry of the Upper Atmosphere}",
+         year = 1989,
+       adsurl = {https://ui.adsabs.harvard.edu/abs/1989pcua.book.....R},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
 @article{Swartz1985,
 	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
 	Adsurl = {http://adsabs.harvard.edu/abs/1985JGR....90.6587S},
@@ -8648,6 +8736,27 @@ ions doublement chargés et transport cinétique des protons}},
 	doi = {10.1051/0004-6361/200912952},
 	tags = "Airglow, Various"
 }
+@article{Lilensten2013,
+  title={Dications and thermal ions in planetary atmospheric escape},
+  author={Lilensten, J and Wedlund, C Simon and Barth{\'e}l{\'e}my, M and Thissen, R and Ehrenreich, D and Gronoff, G and Witasse, O},
+  journal={Icarus},
+  volume={222},
+  number={1},
+  pages={169--187},
+  year={2013},
+  publisher={Elsevier}
+}
+@article{Gentieu1973,
+  title={Cross sections for production of the CO (A 1 $\Pi$- X 1 $\Sigma$) Fourth Positive band system and O (3 S) by photodissociation of CO2},
+  author={Gentieu, EP and Mentall, JE},
+  journal={The Journal of Chemical Physics},
+  volume={58},
+  number={11},
+  pages={4803--4815},
+  year={1973},
+  publisher={American Institute of Physics}
+}
+
 
 @article{Wang2001,
 	author = {Wang, K.-Y.},
@@ -9442,6 +9551,16 @@ ions doublement chargés et transport cinétique des protons}},
 	tags = "A ranger"
 }
 
+@article{Samson1992,
+  title={Probability for double photoionization of He and Ne},
+  author={Samson, James AR and Bartlett, RJ and He, ZX},
+  journal={Physical Review A},
+  volume={46},
+  number={11},
+  pages={7277},
+  year={1992},
+  publisher={APS}
+} 
 @article{Piper1993,
 	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
 	Adsurl = {http://adsabs.harvard.edu/abs/1993JChPh..99.3174P},
