--- a/paper/Electrons.tex
+++ b/paper/Electrons.tex
@@ -6,7 +6,10 @@
 %\input{../electron/resultat/O}
 %\input{../electron/resultat/O2}
 %\input{../electron/resultat/CH4}
+\input{../electron/resultat/Ar.tex}
+
 %\input{../electron/resultat/CO}
+
 \input{../electron/resultat/CH4.tex}
 \input{../electron/resultat/CO2.tex}
 \input{../electron/resultat/CO.tex}
